package com.inv.inventryapp.model;

public class ProductCategory {
    // ...existing code...
}

