package com.inv.inventryapp.usecase;

public class HistoryUseCase {
    // ...existing code...
}

