package com.inv.inventryapp.view

import android.view.View

class AddButtonView : View {
    constructor(context: android.content.Context) : super(context)
    // ...existing code...
}

