package com.inv.inventryapp.view

import android.view.View

class CameraInitView : View {
    constructor(context: android.content.Context) : super(context)
    // ...existing code...
}

