package com.inv.inventryapp.view

import android.view.View

class NavigationBarView : View {
    constructor(context: android.content.Context) : super(context)
    // ...existing code...
}

