package com.inv.inventryapp.viewmodel

import androidx.lifecycle.ViewModel

class AnalysisViewModel : ViewModel() {
    // TODO: Implement the ViewModel
}

