package com.inv.inventryapp.viewmodel

import androidx.lifecycle.ViewModel

class SavingsViewModel : ViewModel() {
    // TODO: Implement the ViewModel
}

